<resources>
    <string name="app_name">Watson Chat</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_speech_recognition">Speech Recognition</string>
    <string name="pref_header_orchestration">Orchestration</string>
    <string name="pref_header_voice_synthesis">Voice Synthesis</string>

    <string name="pref_authentication_title">HTTP Authentication</string>
    <string name="pref_username_title">Username</string>
    <string name="pref_password_title">Password</string>

    <string name="pref_orchestration_details_title">Orchestration Details</string>
    <string name="pref_orchestration_use_conversation_title">Use Conversation</string>
    <string name="pref_orchestration_custom_url_title">Custom Orchestration URL</string>
    <string name="pref_orchestration_workspace_title">Workspace ID</string>

    <string name="pref_voice_synthesis_details_title">Voice Synthesis Details</string>
    <string name="pref_voice_synthesis_use_text_to_speech_title">Use Text-to-Speech</string>
    <string name="pref_voice_synthesis_use_native_title">Use Native Voice Synthesis</string>
    <string name="pref_voice_synthesis_custom_url_title">Custom Voice Synthesis URL</string>
    <string name="pref_voice_synthesis_voice_title">Voice</string>

    <string-array name="pref_voice_synthesis_voices_titles">
        <item>Birgit (de-DE)</item>
        <item>Dieter (de-DE)</item>
        <item>Kate (en-GB)</item>
        <item>Allison (en-US)</item>
        <item>Lisa (en-US)</item>
        <item>Michael (en-US)</item>
        <item>Laura (es-ES)</item>
        <item>Enrique (es-ES)</item>
        <item>Sofia (es-LA)</item>
        <item>Sofia (es-US)</item>
        <item>Renee (fr-FR)</item>
        <item>Francesca (it-IT)</item>
        <item>Emi (ja-JP)</item>
        <item>Isabela (pt-BR)</item>
    </string-array>
    <string-array name="pref_voice_synthesis_voices_values">
        <item>de-DE_BirgitVoice</item>
        <item>de-DE_DieterVoice</item>
        <item>en-GB_KateVoice</item>
        <item>en-US_AllisonVoice</item>
        <item>en-US_LisaVoice</item>
        <item>en-US_MichaelVoice</item>
        <item>es-ES_LauraVoice</item>
        <item>es-ES_EnriqueVoice</item>
        <item>es-LA_SofiaVoice</item>
        <item>es-US_SofiaVoice</item>
        <item>fr-FR_ReneeVoice</item>
        <item>it-IT_FrancescaVoice</item>
        <item>ja-JP_EmiVoice</item>
        <item>pt-BR_IsabelaVoice</item>
    </string-array>

    <string name="pref_speech_recognition_details_title">Speech Recognition Details</string>
    <string name="pref_speech_recognition_use_speech_to_text_title">Use Speech-to-Text</string>
    <string name="pref_speech_recognition_use_native_title">Use Native Speech Recognition</string>
    <string name="pref_speech_recognition_custom_url_title">Custom Speech Recognition URL</string>
    <string name="pref_speech_recognition_language_title">Language</string>
<!--05-08 16:04:04.625 29003-29003/? V/LANGUAGES: [af-ZA, id-ID, ms-MY, ca-ES, cs-CZ, da-DK, de-DE, en-AU, en-CA, en-001, en-IN, en-IE, en-NZ, en-PH, en-ZA, en-GB, en-US, es-AR, es-BO, es-CL, es-CO, es-CR, es-EC, es-US, es-SV, es-ES, es-GT, es-HN, es-MX, es-NI, es-PA, es-PY, es-PE, es-PR, es-DO, es-UY, es-VE, eu-ES, fil-PH, fr-FR, fr-CA, gl-ES, hr-HR, zu-ZA, is-IS, it-IT, lt-LT, hu-HU, nl-NL, nb-NO, pl-PL, pt-BR, pt-PT, ro-RO, sl-SI, sk-SK, fi-FI, sv-SE, vi-VN, tr-TR, el-GR, bg-BG, ru-RU, sr-RS, uk-UA, he-IL, ar-IL, ar-JO, ar-AE, ar-BH, ar-DZ, ar-SA, ar-KW, ar-MA, ar-TN, ar-OM, ar-PS, ar-QA, ar-LB, ar-EG, fa-IR, hi-IN, th-TH, ko-KR, cmn-Hans-CN, cmn-Hans-HK, cmn-Hant-TW, yue-Hant-HK, ja-JP]
-->
    <string-array name="pref_speech_recognition_languages_titles">
        <item>Deutsch (DE)</item>
        <item>English (GB)</item>
        <item>English (US)</item>
        <item>Spanish (ES)</item>
        <item>French (FR)</item>
        <item>Italian (IT)</item>
        <item>Japanese (JP)</item>
        <item>Portuguese (BR)</item>
        <item>Portuguese (PT)</item>
    </string-array>
    <string-array name="pref_speech_recognition_languages_values">
        <item>de-DE</item>
        <item>en-GB</item>
        <item>en-US</item>
        <item>es-ES</item>
        <item>fr-FR</item>
        <item>it-IT</item>
        <item>ja-JP</item>
        <item>pt-BR</item>
        <item>pt-PT</item>
    </string-array>

</resources>
